[package]
name = "arma_test"
version = "0.1.0"
authors = ["Axect <axect@outlook.kr>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
cpp_build = "0.5"
cc = { version = "1", features = ["parallel"]}

[dependencies]
cpp = "0.5"
peroxide = "*"
