[package]
name = "libsum2-sys"
version = "0.1.0"
build = "build.rs"
authors = ["Axect <axect@outlook.kr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
cc = { version = "1", features = ["parallel"] }